fix: did and schema controller
